flux/infrastructure/configs/rook-ceph/dashboard-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: nginx
      namespace: nginx-gateway
  hostnames:
    - ceph.thecluster.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
